--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -7,5 +7,5 @@
 
 // GLOBAL
 body{
-  background: linear-gradient(to bottom left, red, white);
+  background: linear-gradient(to bottom right, rgb(60, 84, 160), rgb(60, 84, 160),rgb(60, 84, 160), white);
 }
