--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -33,7 +33,7 @@
 <body ontouchstart="">
     {% include 'core/nav.html' %}
 
-    <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i></div>
+    <!-- <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i></div> -->
     <style type="text/css">
         #navBarSpace{
             width: 100%;
@@ -57,10 +57,8 @@
 <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/vuex@3.5.1/dist/vuex.js"></script>
 <script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 {% block scripts %}
 {% endblock %}
 
