--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -1,9 +1,8 @@
 #navbar {
   background: white;
-  z-index: 100000;
+  z-index: 100;
   width: 100%;
   height: 60px;
-  padding-bottom: 5px;
   position: fixed;
   top: 0px;
   display: -webkit-box;
@@ -12,82 +11,37 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transition: .3s;
-  transition: .3s;
   border-bottom: 1px solid rgba(200, 200, 200, 0.7);
-}
-
-#navbar.account-active {
-  top: -60px;
-}
-
-#navbar.sticky {
-  background: white;
-  -webkit-box-shadow: 0px 3px 5px #142c78;
-          box-shadow: 0px 3px 5px #142c78;
-  border-color: transparent;
-}
-
-#navbar.sticky .hamburger span {
-  background: black;
-}
-
-#navbar.sticky .my-account-icon i {
-  color: black;
-}
-
-#navbar.menu-active {
-  background: white;
-}
-
-#navbar.menu-active .hamburger span {
-  background: black;
-}
-
-#navbar.menu-active .my-account-icon i {
-  color: black;
-}
-
-#navbar .desktop-menu {
-  display: none;
 }
 
 #navbar .logo {
   cursor: pointer;
-  margin: 0;
   position: absolute;
   left: 20px;
-  top: 8px;
   width: auto;
-  height: 100%;
+  height: auto;
 }
 
 #navbar .logo h1 {
+  margin: 0;
   font-family: 'Indie Flower', cursive;
   color: #3c54a0;
-  font-size: 32px;
-  height: 100%;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+  font-size: 30px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
 #navbar .hamburger {
-  margin: 0;
-  padding: 5px;
+  padding: 15px;
   padding-top: 20px;
-  padding-bottom: 20px;
-  position: absolute;
-  right: 15px;
-  height: auto;
+  padding-bottom: 23px;
+  margin: 0;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  border-radius: .5em;
+  width: auto;
+  height: auto;
+  position: absolute;
+  right: 0;
 }
 
 #navbar .hamburger span {
@@ -100,43 +54,54 @@
 }
 
 #navbar .hamburger .upper-span {
-  margin-bottom: 6px;
+  margin-bottom: 5px;
 }
 
 #navbar .hamburger .center-span {
-  -webkit-transition: all 0.4 ease-in-out;
-  transition: all 0.4 ease-in-out;
   opacity: 1;
-  -webkit-transform: translateX(-8px);
-          transform: translateX(-8px);
+  -webkit-transform: translateX(-6px);
+          transform: translateX(-6px);
 }
 
 #navbar .hamburger .lower-span {
-  margin-top: 6px;
+  margin-top: 5px;
 }
 
 #navbar .hamburger.click {
-  border: 1px solid #485ab9;
-}
-
-#navbar .hamburger.click .upper-span {
-  margin-bottom: -3.5px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  width: 20px;
+  background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
+  background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
+  -webkit-animation-name: hamburger-scale;
+          animation-name: hamburger-scale;
+  -webkit-animation-duration: .1s;
+          animation-duration: .1s;
 }
 
 #navbar .hamburger.click .center-span {
-  -webkit-transform: translateX(-20px);
-          transform: translateX(-20px);
   opacity: 0;
+  -webkit-transform: translateX(-16px);
+          transform: translateX(-16px);
 }
 
-#navbar .hamburger.click .lower-span {
-  margin-top: 0;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  width: 20px;
+@-webkit-keyframes hamburger-scale {
+  0% {
+    -webkit-transform: scale(1) rotate(180deg);
+            transform: scale(1) rotate(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1.2) rotate(180deg);
+            transform: scale(1.2) rotate(180deg);
+  }
+}
+
+@keyframes hamburger-scale {
+  0% {
+    -webkit-transform: scale(1) rotate(180deg);
+            transform: scale(1) rotate(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1.2) rotate(180deg);
+            transform: scale(1.2) rotate(180deg);
+  }
 }
 
 #navbar .sidebar {
@@ -147,250 +112,63 @@
   position: absolute;
   top: 60px;
   right: -65%;
-  transition: .7s ease-in-out;
   -webkit-transition: .7s ease-in-out;
-}
-
-#navbar .sidebar img {
-  position: absolute;
-  right: 0;
-  bottom: 15px;
-  width: auto;
-  height: auto;
-}
-
-#navbar .sidebar .sidebar-ul {
-  position: relative;
-  width: 100%;
-  text-align: center;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li {
-  list-style: none;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li a {
-  border: 2px solid transparent;
-  color: #485ab9;
-  display: inline-block;
-  text-decoration: none;
-  width: 60%;
-  font-size: 18px;
-  margin: 25px auto;
-  padding: 5px;
-  opacity: 0;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li :nth-child(5) {
-  border: 2px solid transparent;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  border-radius: 4px;
-  color: white;
-  -webkit-box-shadow: 0px 5px 2px #3c54a0;
-          box-shadow: 0px 5px 2px #3c54a0;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(1) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 0.2s;
-  transition: 1s ease-in-out 0.2s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(2) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 0.4s;
-  transition: 1s ease-in-out 0.4s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(3) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 0.6s;
-  transition: 1s ease-in-out 0.6s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(4) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 0.8s;
-  transition: 1s ease-in-out 0.8s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(5) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 1s;
-  transition: 1s ease-in-out 1s;
+  transition: .7s ease-in-out;
 }
 
 #navbar .sidebar.active {
-  transition: .7s ease-in-out;
-  -webkit-transition: .7s ease-in-out;
-  pointer-events: visible;
   right: 0;
+  pointer-events: visible;
 }
 
 #navbar .my-account-icon {
   margin: 0;
   position: absolute;
-  right: 60px;
+  right: 50px;
   cursor: pointer;
-  padding: 5px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-radius: .5em;
-  pointer-events: visible;
-  border: 1px solid transparent;
+  padding: 15px;
+  padding-top: 20px;
+  width: auto;
+  height: auto;
 }
 
 #navbar .my-account-icon i {
   color: black;
   font-size: 22px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 
-#navbar .my-account-icon.active {
-  border-color: #485ab9;
-  pointer-events: none;
+#navbar .my-account-icon.click {
+  background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
+  background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
 }
 
-#navbar .login-signup {
-  width: 97%;
-  height: auto;
-  text-align: center;
-  position: fixed;
-  bottom: -60px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  border-radius: 15px;
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+#navbar .my-account-icon.click i {
+  -webkit-animation-name: user-scale;
+          animation-name: user-scale;
+  -webkit-animation-duration: .1s;
+          animation-duration: .1s;
 }
 
-#navbar .login-signup.active {
-  bottom: 15px;
-  opacity: 1;
-  pointer-events: visible;
+@-webkit-keyframes user-scale {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
 }
 
-#navbar .login-signup .part-one {
-  border-radius: 10px;
-  background: #ebebeb;
-  width: 100%;
-}
-
-#navbar .login-signup .part-one #logOut {
-  color: #f81212;
-}
-
-#navbar .login-signup .part-one a {
-  color: #0f0f0f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  border-bottom: 1px solid #e1e1e1;
-  font-size: 18px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-
-#navbar .login-signup .part-one a:active {
-  background: #d7d7d7;
-}
-
-#navbar .login-signup .part-one a:nth-child(2) {
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border: none;
-}
-
-#navbar .login-signup .part-two {
-  border-radius: 10px;
-  background: white;
-  margin: 7px 0;
-}
-
-#navbar .login-signup .part-two a {
-  border-radius: 10px;
-  font-size: 18px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  font-weight: bolder;
-}
-
-#navbar .login-signup .part-two a:active {
-  background: #d7d7d7;
-}
-
-#navbar .login-signup .my-account {
-  width: 100%;
-  display: none;
-}
-
-#navbar .login-signup .my-account a {
-  margin: 15px;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-#navbar .login-signup .my-account .my-orders {
-  outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
-  border: 2px solid transparent;
-  color: white;
-}
-
-#navbar .login-signup .my-account .my-account-back {
-  color: #485ab9;
-  background: transparent;
-  border-color: transparent;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-#navbar .login-signup .my-account.active {
-  display: block;
-}
-
-#navbar .order {
-  margin: 0;
-  position: absolute;
-  right: 105px;
-  cursor: pointer;
-  color: white;
-  padding: 5px 8px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  text-align: center;
-  border-radius: 7px;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-  font-size: 14px;
-  border-radius: 4px;
-  background: linear-gradient(135deg, #3c54a0, #6e8efb);
+@keyframes user-scale {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
 }
 
 @media only screen and (min-device-width: 1024px) {
