--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -112,8 +112,8 @@
   position: absolute;
   top: 60px;
   right: -65%;
-  -webkit-transition: .7s ease-in-out;
-  transition: .7s ease-in-out;
+  -webkit-transition: .7s;
+  transition: .7s;
 }
 
 #navbar .sidebar.active {
