--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -73,16 +73,19 @@
     // SIDEBAR
     .sidebar{
         background: rgb(255, 255, 255);
-        width: 65%;
         height: 100vh;
         position: absolute;
-        top: 60px;
-        right: -65%;
+        top: -60px;
+        right: 0px;
+        width: 100%;
         transition: .7s;
+        z-index: 1000;
         opacity: 0;
+        pointer-events: none;
         &.active{
-            right: 10px;
+            top: 60px;
             opacity: 1;
+            pointer-events: visible;
         }
     }    
     // USER CSS
