--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -38,7 +38,7 @@
         #navBarSpace{
             width: 100%;
             height: 60px;
-            background: rgb(120, 144, 220);
+            display: block;
         }
         #navbar{
             margin-top: 0;
