--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -10,12 +10,13 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
 
 
-
+<!-- LOADER -->
 <div class="load-wrapp" id="homeLoader">
    <div class="load-2">
      <div class="line"></div>
@@ -23,7 +24,14 @@
      <div class="line"></div>
    </div>
  </div>
-
+<!-- COVER -->
+<div class="cover" id="cover">
+   <div class="content">
+      <img src="{% static '/images/covers/cover-7.png' %}" class="cover-img" alt="cover-1">   
+      <div class="text">
+      </div>
+   </div>
+</div>
 <!-- <div class="services" id="services">
    <h1 class="heading">Hvorfor velge Webiser?</h1>
 <div class="flex">
