--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -30,11 +30,24 @@
             <span class="lower-span"></span>
         </div>
     <!-- SIDEBAR -->
-    <div class="sidebar" id="sidebar"></div>
+    <div class="sidebar" id="sidebar">
+        <ul class="sidebar-ul">
+            <li class="sidebar-li" id="sidebarLi">
+                <a onclick="prices()">Priser</a>
+                <a href="/om-webiser">Om oss</a>
+                <a onclick="info()">Prosess</a>
+                <a onclick="hosting()">Hosting</a>
+                <a onclick="contact()">Kontakt oss</a>
+            </li>   
+        </ul>
+        <img src="{% static '/images/other/sidebar-bottom-img.png' %}" class="sidebar-bottom-img" alt="sidebar-bottom-img">
+    </div>
     <!-- USER -->
     <a onclick="myaccount()" class="my-account-icon" id="myAccountIcon">
         <i class="far fa-user-astronaut"></i>    
     </a>
+    <!-- ORDER -->
+    <a href="/bestill" class="order" id="makeOrder">Bestill</a>
 </div>
 
 
