--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -9,9 +9,10 @@ html, body {
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
 // STANDARD PHONE
 #navBarSpace{
-  display: none;
+  display: block;
 }
 .scroll-to{
   background: white;
@@ -526,7 +527,7 @@ html, body {
   padding: 20px ;
   border-radius: 5px;
   text-align: center;
-  background-color: white;
+  background-color: rgb(60, 84, 160);
   position: fixed;
   left: 0;
   top: 0;
@@ -553,7 +554,7 @@ html, body {
     width: 15px;
     height: 15px;
     border-radius: 15px;
-    background-color: rgb(60, 84, 160);
+    background-color: white;
   }
   
   .ring-1 {
