--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -7,7 +7,34 @@
 }
 
 body {
-  background: -webkit-gradient(linear, left top, right bottom, from(#3c54a0), color-stop(#3c54a0), color-stop(#3c54a0), to(white));
-  background: linear-gradient(to bottom right, #3c54a0, #3c54a0, #3c54a0, white);
+  background: -webkit-gradient(linear, right top, left top, from(#253b83), color-stop(#3c54a0), color-stop(#3c54a0), to(#637ccc));
+  background: linear-gradient(to left, #253b83, #3c54a0, #3c54a0, #637ccc);
+}
+
+.cover {
+  width: 100%;
+  height: 85vh;
+  background: transparent;
+  padding-top: 60px;
+  text-align: center;
+}
+
+.cover .content {
+  -webkit-transform: translateY(60px);
+          transform: translateY(60px);
+}
+
+.cover .content img {
+  width: 240px;
+  height: auto;
+}
+
+.cover .content .text {
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
+  width: auto;
+  margin: auto;
+  text-align: left;
+  padding-left: 5px;
 }
 /*# sourceMappingURL=global.css.map */
