--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -3,9 +3,32 @@
     padding: 0;
     font-family: 'Alata', sans-serif;
     box-sizing: border-box;
-  }
+}
 
 // GLOBAL
 body{
-  background: linear-gradient(to bottom right, rgb(60, 84, 160), rgb(60, 84, 160),rgb(60, 84, 160), white);
+  background: linear-gradient(to left, rgb(37, 59, 131), rgb(60, 84, 160), rgb(60, 84, 160), rgb(99, 124, 204));
+}
+
+// COVER
+.cover{
+  width: 100%;
+  height: 85vh;
+  background: transparent;
+  padding-top: 60px;
+  text-align: center;
+  .content{
+    transform: translateY(60px);
+    img{
+      width: 240px;
+      height: auto;
+    }
+    .text{
+      transform: translateY(80px);
+      width: auto;
+      margin: auto;
+      text-align: left;
+      padding-left: 5px;
+    }
+  }
 }
