--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -82,6 +82,62 @@
         z-index: 1000;
         opacity: 0;
         pointer-events: none;
+        img{
+            position: absolute;
+            right: 0;
+            bottom: 15px;
+            width: auto;
+            height: auto;
+        }
+        .sidebar-ul{
+            position: relative;
+            width: 100%;
+            text-align: center;
+            .sidebar-li{
+                list-style: none;
+                a{
+                    border: 2px solid transparent;
+                    color: rgb(72, 90, 185);
+                    display: inline-block;
+                    text-decoration: none;
+                    width: 60%;
+                    font-size: 18px;
+                    margin: 25px auto;
+                    padding: 5px;
+                    opacity: 0;
+                    transition: all .5s ease-in-out;
+                }
+                :nth-child(5){
+                    border: 2px solid transparent;
+                    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+                    border-radius: 4px;
+                    color: white;
+                    box-shadow: 0px 5px 2px rgb(60, 84, 160);
+                }
+                &.active{
+                    :nth-child(1){
+                        opacity: 1;
+                        transition: 1s ease-in-out 0.2s;
+                    }
+                    :nth-child(2){
+                        opacity: 1;
+                        transition: 1s ease-in-out 0.4s;
+                    }
+                    :nth-child(3){
+                        opacity: 1;
+                        transition: 1s ease-in-out 0.6s;
+                    }
+                    :nth-child(4){
+                        opacity: 1;
+                        transition: 1s ease-in-out 0.8s;
+                    }
+                    :nth-child(5){
+                        opacity: 1;
+                        transition: 1s ease-in-out 1s;
+                    }
+                }
+            }
+        }
         &.active{
             top: 60px;
             opacity: 1;
@@ -115,6 +171,31 @@
             100% {transform: scale(1.2);}
         }
     }
+    // ORDER CSS
+    .order{
+        margin: 0;
+        position: absolute;
+        right: 105px;
+        cursor: pointer;
+        color: white;
+        padding: 5px 8px;
+        width: max-content;
+        text-align: center;
+        border-radius: 7px;
+        transition: all 0.2s ease-in;
+        font-size: 14px;
+        border-radius: 4px;
+        background: linear-gradient(135deg,rgb(60, 84, 160), #6e8efb); 
+        text-decoration: none;
+        animation: order-repeat-animation 2s infinite;
+        animation-timing-function: ease-in-out;
+        animation-direction:alternate;
+         // ORDER CSS KEYFRAMES ANIMATION
+         @keyframes order-repeat-animation {
+            from {box-shadow: 5px 1px 20px rgb(255, 255, 255);}
+            to {box-shadow: 1px 1px 5px rgb(60, 84, 160);}
+        }
+      }
 }
 
 // #navbar{
@@ -164,79 +245,6 @@
 //         display: none;
 //     }
 // 
-//     .sidebar{
-//         pointer-events: none;
-//         background: rgb(255, 255, 255);
-//         width: 65%;
-//         height: 100vh;
-//         position: absolute;
-//         top: 60px;
-//         right: -65%;
-//         transition: .7s ease-in-out;
-//         -webkit-transition: .7s ease-in-out;
-//         img{
-//             position: absolute;
-//             right: 0;
-//             bottom: 15px;
-//             width: auto;
-//             height: auto;
-//         }
-//         .sidebar-ul{
-//             position: relative;
-//             width: 100%;
-//             text-align: center;
-//             .sidebar-li{
-//                 list-style: none;
-//                 a{
-//                     border: 2px solid transparent;
-//                     color: rgb(72, 90, 185);
-//                     display: inline-block;
-//                     text-decoration: none;
-//                     width: 60%;
-//                     font-size: 18px;
-//                     margin: 25px auto;
-//                     padding: 5px;
-//                     opacity: 0;
-//                     transition: all .5s ease-in-out;
-//                 }
-//                 :nth-child(5){
-//                     border: 2px solid transparent;
-//                     background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
-//                     border-radius: 4px;
-//                     color: white;
-//                     box-shadow: 0px 5px 2px rgb(60, 84, 160);
-//                 }
-//                 &.active{
-//                     :nth-child(1){
-//                         opacity: 1;
-//                         transition: 1s ease-in-out 0.2s;
-//                     }
-//                     :nth-child(2){
-//                         opacity: 1;
-//                         transition: 1s ease-in-out 0.4s;
-//                     }
-//                     :nth-child(3){
-//                         opacity: 1;
-//                         transition: 1s ease-in-out 0.6s;
-//                     }
-//                     :nth-child(4){
-//                         opacity: 1;
-//                         transition: 1s ease-in-out 0.8s;
-//                     }
-//                     :nth-child(5){
-//                         opacity: 1;
-//                         transition: 1s ease-in-out 1s;
-//                     }
-//                 }
-//             }
-//         }
-//         &.active{
-//             transition: .7s ease-in-out;
-//             -webkit-transition: .7s ease-in-out;    
-//             pointer-events: visible;
-//             right: 0;
-//         }
-//     }
 //     .login-signup{
 //         width: 97%;
 //         height: auto;
@@ -326,21 +334,6 @@
 //             }
 //         }
 //     }
-//     .order{
-//         margin: 0;
-//         position: absolute;
-//         right: 105px;
-//         cursor: pointer;
-//         color: white;
-//         padding: 5px 8px;
-//         width: max-content;
-//         text-align: center;
-//         border-radius: 7px;
-//         transition: all 0.2s ease-in;
-//         font-size: 14px;
-//         border-radius: 4px;
-//         background: linear-gradient(135deg,rgb(60, 84, 160), #6e8efb);    
-//       }
 // }
 // NORMAL DESKTOP
 @media only screen and (min-device-width:1024px) { 
